# aKnightsLegacy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/levels/: level0Base.txt  level0Objects.txt  startMenuBase.txt  startMenuText.txt  startMenuTextV2.txt  startMenuTextV3.txt  startMenuTextV4.txt  startMenuTextV5.txt  startMenuTextV6.txt
assets/levels/level_1/: Level1.ldtk  Level1InProgress.ldtk  arrows.ldtk  dungeonLevel1.tmx  level1Base.txt  level1Objects.txt  level1_v2.ldtk  lvl1backup.ldtk  map1.txt
assets/levels/level_1/backup/: Level_1_stats.txt  level1Base.txt  level1Objects.txt
assets/levels/level_2/: decorFloorCracks.tsx  decorWallCracks.tsx  dungeonLevel2.tiled-session  dungeonLevel2.tmx  hammer.tsx  leversdoors.tsx  objects.tsx  player.tsx  projectile.tsx  skeleton.tsx  traps.tsx  wallsfloor.tsx  water.tsx  water2.tsx
assets/levels/perf_tests/: 1824x1824_empty_map.ldtk  3008x3008_empty_map.ldtk  3008x3008_walls_map.ldtk
assets/levels/start_menu/: title_screen.ldtk
src/: assets.cpp  assets.h  main.cpp
src/AChoiEngine/ai/private/: aiComponent.cpp  aiPathfindingSys.cpp  aiSys.cpp
src/AChoiEngine/ai/public/: aiComponent.h  aiPathfindingSys.h  aiSys.h
src/AChoiEngine/audio/public/: AudioInterface.h
src/AChoiEngine/camera/private/: CameraSys.cpp
src/AChoiEngine/camera/public/: Camera.h  CameraObject.h  CameraSys.h
src/AChoiEngine/debug/: DebugConfigEngine.h
src/AChoiEngine/gameObject/private/: GameObject.cpp
src/AChoiEngine/gameObject/public/: GameObject.h
src/AChoiEngine/gameStateInterface/public/: GameStateInterface.h
src/AChoiEngine/gfx/private/: AnimationComponent.cpp  AnimationSys.cpp
src/AChoiEngine/gfx/public/: AnimationComponent.h  AnimationSys.h
src/AChoiEngine/hudInterface/: HudInterface.h
src/AChoiEngine/input/public/: Keyboard.h
src/AChoiEngine/physics/private/: CollisionDetectionComponent.cpp  CollisionResponse.cpp  CollisionResponseSys.cpp  OverlappingHitboxDetection.cpp  OverlappingHitboxDetectionSys.cpp
src/AChoiEngine/physics/public/: CollisionDetectionComponent.h  CollisionResponse.h  OverlappingHitboxDetection.h  OverlappingHitboxDetectionSys.h
src/AChoiEngine/render/private/: RenderSys.cpp
src/AChoiEngine/render/public/: RenderSys.h
src/AChoiEngine/structs/public/: Structs.h
src/AChoiEngine/utilities/private/: Timer.cpp
src/AChoiEngine/worldLayer/private/: LdtkMapLoader.cpp  Map.cpp  MapObject.cpp  TxtMapLoader.cpp
src/AChoiEngine/worldLayer/public/: LdtkMapLoader.h  Map.h  MapObject.h  TxtMapLoader.h
src/knightsLegacy/audioManager/private/: AudioManager.cpp
src/knightsLegacy/audioManager/public/: AudioManager.h
src/knightsLegacy/configs/: configs.h
src/knightsLegacy/core/private/: App.cpp  GameManager.cpp
src/knightsLegacy/core/public/: App.h  AppData.h  GameManager.h
src/knightsLegacy/debug/: DebugConfigGame.h
src/knightsLegacy/entities/enemies/private/: Skeleton.cpp
src/knightsLegacy/entities/enemies/public/: Skeleton.h
src/knightsLegacy/entities/player/private/: Player.cpp
src/knightsLegacy/entities/player/public/: Player.h
src/knightsLegacy/gameStates/private/: CreditsGameState.cpp  MainGameplayGameState.cpp  PauseGameState.cpp  StartMenuGameState.cpp
src/knightsLegacy/gameStates/public/: CreditsGameState.h  MainGameplayGameState.h  PauseGameState.h  StartMenuGameState.h
src/knightsLegacy/hud/private/: Hud.cpp
src/knightsLegacy/hud/public/: Hud.h
src/knightsLegacy/perfTests/: TestplayGameState.cpp
src/knightsLegacy/utilities/private/: CooldownComponent.cpp
src/knightsLegacy/utilities/public/: CooldownComponent.h
src/knightsLegacy/weapons/private/: Projectile.cpp  Stun.cpp
src/knightsLegacy/weapons/public/: Projectile.h  Stun.h
src/knightsLegacy/world/private/: TileCatalog.cpp
src/knightsLegacy/world/public/: TileCatalog.h
